Dutch Ij should not be selected as a single grapheme by ::first-letter
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
People
(Reporter: ishida, Assigned: jfkthame)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:109.0) Gecko/20100101 Firefox/112.0
Steps to reproduce:
When 'IJ' appear together at the beginning of a paragraph (eg. in "IJzertoren is een toren en vredesmonument in de West-Vlaamse stad Diksmuide."), both the first two letters should be highlighted.
That was fixed in https://bugzilla.mozilla.org/show_bug.cgi?id=92176 (Thank you.)
On the other hand, 'Ij' should not be converted to 'IJ', if it occurs, since it may relate to (rare) nouns such as Ijad, Ijara, Ijaw, Ijaz, Ijebu, Ijenda, Ijeoma, Ijewere, Ijima, Ijja, Ijlal, Ijo, Ijobalit, Ijumaa and probably others.
Actual results:
However, Gecko also selects 'Ij', which is not correct.
Interactive test Dutch IJ are selected as a single grapheme by ::first-letter
https://github.com/w3c/line_paragraph_tests/issues/56
Interactive test Ij is non ambiguously not Dutch IJ nor Dutch ij and should not be selected as a single grapheme for ::first-letter.
https://github.com/w3c/line_paragraph_tests/issues/85
Expected results:
Gecko should continue to select 'ij' and 'IJ', but not select 'Ij'.
[This is being tracked by the W3C at https://github.com/w3c/eurlreq/issues/6]
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Layout: Text and Fonts' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
| Assignee | ||
Comment 2•3 years ago
|
||
Updated•3 years ago
|
Comment 5•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 7•2 years ago
|
||
This issue is Verified as fixed in our latest Release 115, Beta as well as Nightly builds.
Description
•