Bug 1835850 - CSS ::first-letter should select Dutch 'ij' or 'IJ' as a unit, but not mixed-case 'Ij'. r=emilio,jwatt

Differential Revision: https://phabricator.services.mozilla.com/D179526